# Gratonite

./: .current_run_id  .dockerignore  .easignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MOBILE_UI_UX_HANDOFF.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.playwright-cli/: page-2026-02-23T16-08-36-181Z.yml  page-2026-02-23T16-16-04-070Z.yml
.swarm/: context.md
apps/server/src-tauri/: Cargo.toml  tauri.conf.json
apps/server/src-tauri/icons/: icon.icns
apps/server/src-tauri/src/: config.rs  docker.rs  lib.rs
deploy/: .env.example  Caddyfile  DEPLOYMENT-STEPS.md  deploy.sh  docker-compose.production.yml  install.sh
docs/: CONS-011-012-SUMMARY.md  CONS-011-COMPLETION.md  DEPLOY-TO-HETZNER.md  DEPLOY-TO-OWN-SERVER.md  DEPLOYMENT-COMPLETE.md  DEPLOYMENT-FIX-COMPLETE.md  DNS-CONFIGURATION.md  EMAIL-VERIFICATION-DISABLED.md  EXECUTION-PLAN.md  FINAL-STATUS.md  GratoniteFinal.md  HANDOFF.md  PRODUCTION-READINESS-ASSESSMENT.md  QUALITY-CHECKLIST.md  QUICK-DEPLOY-GUIDE.md  README.md  SECURITY-AUDIT.md  SMTP-CONFIGURATION.md  WEB-APP-SPLIT-PLAN.md  deploy-artifact-hygiene.md  deploy-review-checklist.md  i18n-CONTRIBUTING.md  memory.md  observability-release-alerts.md  phase-9-performance.md  phase7-summary.md  production-smoke-setup.md  project_file_paths_SOURCE.txt  release-runbook.md  self-hosting.md
ralph/: .last-branch  prd.json  (+1 more)
(+1961 files in other folders)
