[package]
name = "gratonite-server"
version = "0.1.1"
description = "Gratonite Server — One-click self-hosting for Gratonite"
authors = ["Gratonite"]
edition = "2021"

[lib]
name = "server_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rand = "0.9"
base64 = "0.22"
dirs = "6"
